--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "index.js",
   "scripts": {
     "browser-sync": "browser-sync start --server --files ./src/ styles.css index.html",
-    "sass": "sass styles.scss styles.css",
-    "sass-watch": "sass *.scss styles.css --watch",
-    "dev": "concurrently npm:sass-watch npm:browser-sync",
+    "dev": "concurrently npm:browser-sync",
     "copy:html": "cpy ./*.html ./build/",
     "copy:css": "cpy ./*.css ./build/",
     "copy:js": "cpy ./src ./build/",
     "build": "concurrently npm:copy:*",
     "eslint": "eslint ./src",
-    "stylelint": "stylelint styles.scss",
+    "stylelint": "stylelint styles.css",
     "lint": "concurrently npm:eslint npm:stylelint",
     "prettier": "prettier --write ."
   },
@@ -27,7 +25,6 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
-    "sass": "^1.80.6",
     "stylelint": "^16.10.0",
     "stylelint-config-sass-guidelines": "^12.1.0",
     "stylelint-config-standard": "^36.0.1"
